--- a/AntonStockApp/res/layout/fragment_add_pmm.xml
+++ b/AntonStockApp/res/layout/fragment_add_pmm.xml
@@ -26,7 +26,7 @@
         <ListView
             android:id="@+id/productosDispo"
             android:layout_width="match_parent"
-            android:layout_height="328dp" >
+            android:layout_height="240dp" >
         </ListView>
 
         <View
@@ -36,6 +36,7 @@
             android:layout_marginTop="10dp"
             android:background="@color/actionbar_theme_color" />
 
+        
         <TableLayout
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
@@ -62,36 +63,151 @@
                     android:ems="10"
                    />
             </TableRow>
+           </TableLayout>
 
-            <TableRow
-                android:id="@+id/tableRow1"
+             <TableLayout
+                 android:id="@+id/marmolData"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content" >
+
+                <TableRow
+                    android:id="@+id/tableRow8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/TextView02"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:text="@string/in_prod_tipo_dim"
+                        android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                    <Spinner
+                        android:id="@+id/tipoDim"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:entries="@array/tipoDim" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow2"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TableLayout
+                        android:id="@+id/innerTable"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1" >
+
+                        <TableRow
+                            android:id="@+id/innerRow"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" >
+
+                            <TextView
+                                android:id="@+id/TextView046"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center_horizontal"
+                                android:text="@string/in_prod_largo"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <EditText
+                                android:id="@+id/altoPlaca"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:singleLine="true"
+								android:nextFocusDown="@+id/anchoPlaca"
+                                android:inputType="numberDecimal" />
+
+                            <TextView
+                                android:id="@+id/prodNombre"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center_horizontal"
+                                android:text="@string/in_prod_unidad"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <TextView
+                                android:id="@+id/textView4"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center_horizontal"
+                                android:text="@string/in_prod_ancho"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <EditText
+                                android:id="@+id/anchoPlaca"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:singleLine="true"
+								android:nextFocusDown="@+id/clientesList"                                
+                                android:inputType="numberDecimal" />
+                            <TextView
+                                android:id="@+id/prodNombre2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center_horizontal"
+                                android:text="@string/in_prod_unidad"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+                            <TextView
+                                android:id="@+id/unidades"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:gravity="center_horizontal"
+                                android:text="@string/in_prod_espesor"
+                                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+                            <Spinner
+                                android:id="@+id/espesorPlaca"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:entries="@array/espesores" />
+
+                        </TableRow>
+                    </TableLayout>
+                </TableRow>
+            </TableLayout>
+          
+             <TableLayout
+                 android:id="@+id/cantidad"
+                 android:layout_width="match_parent"
+                 android:layout_height="match_parent" >
+			<TableRow
+                android:id="@+id/tableRow26"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" >
 
                 <TextView
-                    android:id="@+id/cantPlacasUtillbl"
+                    android:id="@+id/lblCantidad"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/add_pm_prod_cant"
                     android:textAppearance="?android:attr/textAppearanceMedium" />
 
                 <EditText
-                    android:id="@+id/cantidadProducto"
+                    android:id="@+id/cantidadPlacas"
                     android:layout_width="fill_parent"
                     android:layout_height="50dp"
                     android:ems="10"
-                    android:inputType="number" />
-
-                <TextView
-                    android:id="@+id/cantPlacasUtillbl"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:text="@string/add_pm_prod_mp_unidad"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />                
-            </TableRow>
+                    android:inputType="text" />                
+            </TableRow>            
+                 
 			<TableRow
-                android:id="@+id/tableRow2"
+                android:id="@+id/rowPicking"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent" >
 
@@ -142,7 +258,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/LinearLayout1"
+        android:id="@+id/dimsLayout"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="10sp"
