--- a/AntonStockApp/res/layout/fragment_detail_product.xml
+++ b/AntonStockApp/res/layout/fragment_detail_product.xml
@@ -180,6 +180,21 @@
                 android:text="Cantidad"
                 android:textSize="25sp" />
         </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="updateStock"
+                android:text="@string/lbl_prod_stock_adjust" />
+
+        </TableRow>
+
     </TableLayout>
 
 </RelativeLayout>
